# mcp-server-datahub

./: DEVELOPING.md  Makefile  README.md  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
gql/: datahub_semantic_layer.gql  entity_details.gql  queries.gql
src/mcp_server_datahub/: __main__.py  mcp_server.py
src/mcp_server_datahub/gql/: entity_details.gql  queries.gql
tests/: test_mcp_server.py  test_semantic_search.py
