[project]
name = "mcp-server-datahub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "acryl-datahub @ https://312eea66.datahub-wheels.pages.dev/artifacts/wheels/acryl_datahub-0.0.0.dev1-py3-none-any.whl",
]

[tool.uv.sources]
acryl-datahub = { path = "../datahub/metadata-ingestion", editable = true }
