[project]
name = "mcp-server-datahub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "acryl-datahub==1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

#[tool.uv.sources]
#acryl-datahub = { path = "../datahub/metadata-ingestion", editable = true }
